--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Chandra - Sumon Chandra Personal Portfolio</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="w-screen min-h-screen flex items-center justify-center bg-[#0b1224f3]">
+        <img class="w-52" src="./src/assets/preLoader.gif" alt="pre loader">
+      </div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
